# VulkanFlappyBird

./: CMakeLists.txt  README.txt  build.ps1  build.sh  clearCache.ps1  clearCache.sh
lib/embedFiles/: CMakeLists.txt  buildEmbedFiles.ps1  buildEmbedFiles.sh
lib/embedFiles/src/: main.cxx
shaders/: objectShader.frag  objectShader.vert  shadowMapShader.frag  shadowMapShader.vert
src/: cfg.hxx.in  vulkan.cxx
src/lib/: 3d.hxx  base64.hxx  embededFiles.hxx  embededFiles.sync-conflict-20251111-150634-CI2ZZ3X.hxx  obj_loader.hxx  physics.hxx  validationLayers.hxx  vulkanInit.hxx
