cmake_minimum_required(VERSION 3.10)

project(embedFiles VERSION 1.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(${PROJECT_NAME} "src/main.cxx")

set_target_properties(${PROJECT_NAME} PROPERTIES
  CXX_STANDARD ${CMAKE_CXX_STANDARD}
  CXX_STANDARD_REQUIRED ${CMAKE_CXX_STANDARD_REQUIRED}
)
